<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="tip_label">Tip is:</string>
    <string name="default_tip_amount">$0</string>
    <string name="custom_tip_label">Enter tip %:</string>
    <string name="ten_percent">10%</string>
    <string name="fifteen_percent">15%</string>
    <string name="twenty_percent">20%</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>

</resources>
